fix responesiveness on small screen devices

--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,9 @@
   justify-content: flex-end;
   width: 40%;
 }
+
+@media screen and (max-width: 1000px) {
+  .header {
+    width: 90%;
+  }
+}
