--- a/src/components/Screen.css
+++ b/src/components/Screen.css
@@ -9,3 +9,9 @@
   margin-bottom: 20px;
   border-radius: 8px;
 }
+
+@media screen and (max-width: 1000px) {
+  .screen {
+    width: 90%;
+  }
+}
